BinaryTree- Successor of a given node, when parent is given

--- a/Python/BinaryTree/Successor.ipynb
+++ b/Python/BinaryTree/Successor.ipynb
@@ -5,13 +5,31 @@
    "metadata": {},
    "source": [
     "## Problem:\n",
-    "Find successor of given node.\n",
-    "Successor is the next element in the InOrder sequence of a given node.\n",
+    "Write a function that takes in a Binary Tree (where nodes have an additional pointer to their parent node) as well as a node contained in that tree and returns the given node's successor. A node's successor is the next node to be visited (immediately after the given node) when traversing its tree using the in-order tree-traversal technique. A node has no successor if it's the last node to be visited in the in-order traversal. If a node has no successor, your function should return None / null . Each BinaryTree node has an integer value , a parent node, a left child node, and a right child node. Children nodes can either be BinaryTree nodes themselves or None / null .\n",
     "\n",
-    "If InOrder sequence is : 6-4-2-5-1-3-7-8\n",
-    "Successor of 5 is 1\n",
-    "Successor of 2 is 5\n",
-    "Successor of 8 is None"
+    "Example:\n",
+    "\n",
+    "tree =\n",
+    "\n",
+    "             1\n",
+    "            / \\\n",
+    "           2   3\n",
+    "         /  \\\n",
+    "        4    5\n",
+    "       /\n",
+    "      6\n",
+    "\n",
+    "node = 5\n",
+    "\n",
+    "Sample Output\n",
+    "\n",
+    "1\n",
+    "\n",
+    "// This tree's in-order traversal order is:\n",
+    "\n",
+    "// 6 -> 4 -> 2 -> 5 -> 1 -> 3\n",
+    "\n",
+    "// 1 comes immediately after 5."
    ]
   },
   {
@@ -25,6 +43,14 @@
     "2. Apply diffferent logic to find the successor without traversing all nodes and without storing all nodes.\n",
     "    Need Parent as one element in each node.\n",
     "    O(h) time complexity h = height of node. O(1) is the space complexity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Approach two:\n",
+    "Immediate successor of a node is , right subtree’s left most node. If right subtree is not there then its parent. However, if node is a right child of parent, then successor is parent’s parent."
    ]
   },
   {
