--- a/Python/BinaryTree/SumOfEachBranch.ipynb
+++ b/Python/BinaryTree/SumOfEachBranch.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,18 +72,18 @@
     "def calculateBranchSums(node, currentSum, sums):\n",
     "    if node is None:\n",
     "        return\n",
-    "    sum = currentSum + node.value\n",
+    "    currentSum += node.value\n",
     "    \n",
     "    if node.left is None and node.right is None:\n",
-    "        sums.append(sum)\n",
+    "        sums.append(currentSum)\n",
     "        return\n",
-    "    calculateBranchSums(node.left, sum, sums)\n",
-    "    calculateBranchSums(node.right, sum, sums)"
+    "    calculateBranchSums(node.left, currentSum, sums)\n",
+    "    calculateBranchSums(node.right, currentSum, sums)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "[15, 16, 18, 10, 11]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,13 +136,6 @@
    "source": [
     "branchSum(b)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
