BST-Create Min Height BST from Sorted Array

--- a/Python/BinarySearchTree/ArrayToMinBST.ipynb
+++ b/Python/BinarySearchTree/ArrayToMinBST.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,33 +20,27 @@
     "        self.value = value\n",
     "        self.left = None\n",
     "        self.right = None\n",
-    "    \n",
-    "    def insert(self, value):\n",
-    "        root = self\n",
-    "        parent = None\n",
-    "        while root:\n",
-    "            parent = root\n",
-    "            if value < root.value:\n",
-    "                root = root.left\n",
-    "            else:\n",
-    "                root = root.right\n",
-    "        if value < parent.value:\n",
-    "            parent.left = BST(value)\n",
-    "        else:\n",
-    "            parent.right = BST(value)\n",
-    "    \n",
+    "       \n",
     "def preorder(tree):\n",
     "    \n",
     "    if tree:\n",
     "        print(tree.value)\n",
     "        preorder(tree.left)\n",
     "        preorder(tree.right)\n",
+    "        \n",
+    "    \n",
+    "def inorder(tree):\n",
+    "    \n",
+    "    if tree:\n",
+    "        preorder(tree.left)\n",
+    "        print(tree.value)\n",
+    "        preorder(tree.right)\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,18 +59,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n",
       "2\n",
       "1\n",
       "3\n",
       "4\n",
+      "5\n",
       "8\n",
       "6\n",
       "7\n",
@@ -88,23 +82,23 @@
    "source": [
     "array = [1,2,3,4,5,6,7,8,9,10]\n",
     "bst = minHeightBst(array)\n",
-    "preorder(bst)"
+    "inorder(bst)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n",
       "2\n",
       "1\n",
       "5\n",
       "7\n",
+      "10\n",
       "14\n",
       "13\n",
       "15\n",
@@ -115,7 +109,7 @@
    "source": [
     "array = [1,2,5,7,10,13,14,15,22]\n",
     "bst = minHeightBst(array)\n",
-    "preorder(bst)"
+    "inorder(bst)"
    ]
   },
   {
