BST-Create Min Height BST from Sorted Array

--- a/Python/BinarySearchTree/ArrayToMinBST.ipynb
+++ b/Python/BinarySearchTree/ArrayToMinBST.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
     "    return createMinHeightBst(array, 0, len(array)-1)\n",
     "\n",
     "def createMinHeightBst(array, minindex, maxindex):\n",
-    "    if maxindex < minindex:\n",
+    "    if minindex > maxindex:\n",
     "        return None\n",
     "    midindex = (minindex + maxindex)//2\n",
     "    bst = BST(array[midindex])\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
