--- a/Python/BinarySearchTree/ArrayToMinBST.ipynb
+++ b/Python/BinarySearchTree/ArrayToMinBST.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,15 +32,15 @@
     "def inorder(tree):\n",
     "    \n",
     "    if tree:\n",
-    "        preorder(tree.left)\n",
+    "        inorder(tree.left)\n",
     "        print(tree.value)\n",
-    "        preorder(tree.right)\n",
+    "        inorder(tree.right)\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,21 +59,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
       "1\n",
+      "2\n",
       "3\n",
       "4\n",
       "5\n",
-      "8\n",
       "6\n",
       "7\n",
+      "8\n",
       "9\n",
       "10\n"
      ]
@@ -87,20 +87,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
       "1\n",
+      "2\n",
       "5\n",
       "7\n",
       "10\n",
-      "14\n",
       "13\n",
+      "14\n",
       "15\n",
       "22\n"
      ]
