Maximum of all elements in subarray

--- a/Python/SlidingWindow/Maximum of all elements in subarray.ipynb
+++ b/Python/SlidingWindow/Maximum of all elements in subarray.ipynb
@@ -19,13 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import deque\n",
     "def maxElementsInSubarray(array, k):\n",
     "    \n",
-    "    temp = []\n",
+    "    temp = deque([])\n",
     "    for j in range(k):\n",
     "        e = array[j]\n",
     "        while len(temp)>0 and e>temp[-1]:\n",
@@ -39,7 +40,7 @@
     "    while right < len(array):\n",
     "        e = array[left]\n",
     "        if e == temp[0]:\n",
-    "            temp.pop(0)\n",
+    "            temp.popleft()\n",
     "        e = array[right]\n",
     "        while len(temp)>0 and e>temp[-1]:\n",
     "            temp.pop()\n",
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +66,7 @@
        "[3, 3, 5, 5, 5, 3, 3, 7]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +88,7 @@
        "[3, 3, 2, 5]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
