--- a/Python/DynamicProgramming/KnapSack-0-1 (recursive, memoization, top-down).ipynb
+++ b/Python/DynamicProgramming/KnapSack-0-1 (recursive, memoization, top-down).ipynb
@@ -170,6 +170,101 @@
     "capacity =12\n",
     "knapsack_DP(weights, values, capacity)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# As there are two rows only involved, so reduced dp size to 2 rows only.\n",
+    "def knapsack_optimized(weights, values, capacity):\n",
+    "    n = len(weights)\n",
+    "    dp = [[0 for _ in range(capacity+1)] for _ in range(2)]\n",
+    "    for i in range(1, n+1):\n",
+    "        for j in range(1, capacity +1):\n",
+    "            w = weights[i-1]\n",
+    "            if w <= j:\n",
+    "                dp[i%2][j] = max(values[i-1] + dp[(i-1)%2][j-w], dp[(i-1)%2][j])\n",
+    "            else:\n",
+    "                dp[i%2][j] = dp[(i-1)%2][j]\n",
+    "    return dp[1][capacity]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights = [1,2,3,4,5]\n",
+    "values = [20, 8, 15,10,12]\n",
+    "capacity =12\n",
+    "knapsack_optimized(weights, values, capacity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Further optimization, we need previous row to know the previous value in dp. \n",
+    "# This can be done, if we travers the row from righ to left.\n",
+    "# optimized with 1 row only. 1-D dp.\n",
+    "\n",
+    "def knapsack_1D (weights, values, capacity):\n",
+    "    n = len(weights)\n",
+    "    dp = [0] * (capacity +1)\n",
+    "    \n",
+    "    for i in range(1, n+1):\n",
+    "        for j in range(capacity, 0, -1): # start from last column\n",
+    "            w = weights[i-1]\n",
+    "            if w <= j:\n",
+    "                dp[j] = max(values[i-1] + dp[j-w], dp[j])\n",
+    "    return dp[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights = [1,2,3,4,5]\n",
+    "values = [20, 8, 15,10,12]\n",
+    "capacity =12\n",
+    "knapsack_1D(weights, values, capacity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
