Optimized for space complexity

--- a/Python/DynamicProgramming/Knapsack-Count-subset-for-given-difference.ipynb
+++ b/Python/DynamicProgramming/Knapsack-Count-subset-for-given-difference.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
     "    \n",
     "    for i in range(1, n+1):\n",
     "        for j in range(1, total + 1):\n",
-    "            if array[i-1]<<j:\n",
+    "            if array[i-1]<=j:\n",
     "                dp[i][j] = dp[i-1][j-array[i-1]] + dp[i-1][j]\n",
     "            else:\n",
     "                dp[i][j] = dp[i-1][j]\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "3"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,6 +78,111 @@
     "array = [1,1,2,3]\n",
     "diff = 1\n",
     "countSubsetForGivenDiff(array, diff)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Space complexity reduced to O(2*total)\n",
+    "def countSubsetForGivenDiff_spaceOptimized(array, diff):\n",
+    "    n = len(array)\n",
+    "    s = sum(array)\n",
+    "    total = (s + diff)\n",
+    "    \n",
+    "    if total%2 != 0:\n",
+    "        return 0\n",
+    "    total = total//2\n",
+    "    \n",
+    "    dp = [[0 for _ in range(total +1)] for _ in range(2)]\n",
+    "    \n",
+    "    for i in range(2):\n",
+    "        dp[i][0] = 1\n",
+    "        \n",
+    "    \n",
+    "    for i in range(1, n+1):\n",
+    "        for j in range(1, total + 1):\n",
+    "            if array[i-1]<=j:\n",
+    "                dp[i%2][j] = dp[(i-1)%2][j-array[i-1]] + dp[(i-1)%2][j]\n",
+    "            else:\n",
+    "                dp[i%2][j] = dp[(i-1)%2][j]\n",
+    "    return dp[n%2][-1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array = [1,1,2,3]\n",
+    "diff = 1\n",
+    "countSubsetForGivenDiff_spaceOptimized(array, diff)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Further Space complexity reduced to O(total)\n",
+    "def countSubsetForGivenDiff_1D(array, diff):\n",
+    "    n = len(array)\n",
+    "    s = sum(array)\n",
+    "    total = (s + diff)\n",
+    "    \n",
+    "    if total%2 != 0:\n",
+    "        return 0\n",
+    "    total = total//2\n",
+    "    \n",
+    "    dp = [0] * (total + 1)\n",
+    "    \n",
+    "    # initialize\n",
+    "    dp[0] = 1\n",
+    "        \n",
+    "    \n",
+    "    for i in range(1, n+1):\n",
+    "        for j in range(total, 0, -1):\n",
+    "            if array[i-1]<=j:\n",
+    "                dp[j] = dp[j] + dp[j-array[i-1]]\n",
+    "                \n",
+    "    return dp[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array = [1,1,2,3]\n",
+    "diff = 1\n",
+    "countSubsetForGivenDiff_1D(array, diff)"
    ]
   },
   {
