--- a/Python/DynamicProgramming/Knapsack-Equal-sum-partition.ipynb
+++ b/Python/DynamicProgramming/Knapsack-Equal-sum-partition.ipynb
@@ -118,6 +118,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def equalSumPartition_1D(array):\n",
+    "    n = len(array)\n",
+    "    total = sum(array)\n",
+    "    if total % 2 != 0:\n",
+    "        return False\n",
+    "    total = total //2\n",
+    "    dp = [False] * (total +1)\n",
+    "    # Initilize\n",
+    "    dp[0] = True\n",
+    "    for i in range(1, n+1):\n",
+    "        for j in range(total, 0, -1):\n",
+    "            if array[i-1] <= j:\n",
+    "                dp[j] = dp [j] or dp[j-array[i-1]]\n",
+    "    return dp[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array = [1,5,11,7]\n",
+    "equalSumPartition_1D(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array = [1,5,11,6]\n",
+    "equalSumPartition_1D(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
