Optimized for space complexity

--- a/Python/DynamicProgramming/Knapsack-Equal-sum-partition.ipynb
+++ b/Python/DynamicProgramming/Knapsack-Equal-sum-partition.ipynb
@@ -122,6 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Space optimization O(total)\n",
     "def equalSumPartition_1D(array):\n",
     "    n = len(array)\n",
     "    total = sum(array)\n",
