--- a/Python/DynamicProgramming/Knapsack-TargetSumWithApplyingSign.ipynb
+++ b/Python/DynamicProgramming/Knapsack-TargetSumWithApplyingSign.ipynb
@@ -77,10 +77,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Space optimization to 1-D dp. O(target)\n",
+    "def countTargetSumWithApplyingSign_1D(array, target):\n",
+    "    n = len(array)\n",
+    "    s = sum(array)\n",
+    "    target = s + target\n",
+    "    if target %2  != 0:\n",
+    "        return 0\n",
+    "    target = target//2\n",
+    "    \n",
+    "    dp = [0] * (target + 1)\n",
+    "    \n",
+    "    # Initialize \n",
+    "    dp[0] = 1\n",
+    "    \n",
+    "    for i in range(1, n+1):\n",
+    "        for j in range(target, 0, -1):\n",
+    "            if array[i-1] <= j:\n",
+    "                dp[j] = dp[j] + dp[j-array[i-1]]\n",
+    "    return dp[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array = [1,1,2,3]\n",
+    "target = 1\n",
+    "countTargetSumWithApplyingSign_1D(array, target)"
+   ]
   },
   {
    "cell_type": "code",
