Optimized for space complexity

--- a/Python/DynamicProgramming/Knapsack-Minimum-subset-sum-difference.ipynb
+++ b/Python/DynamicProgramming/Knapsack-Minimum-subset-sum-difference.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,6 +60,7 @@
     "            probableSumList.append(c)\n",
     "    \n",
     "    # claculate the minimum (s-2s1)\n",
+    "    \n",
     "    m = len(probableSumList)//2\n",
     "    minimum = float('inf')\n",
     "    for i in range(m):\n",
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +80,7 @@
        "1"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +101,7 @@
        "1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,6 +109,63 @@
    "source": [
     "array = [1,6,11,5,2,4]\n",
     "minimumSubsetSumDifference(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Space optimization\n",
+    "\n",
+    "def minimumSubsetSumDifference_1D(array):\n",
+    "    total = sum(array)\n",
+    "    n = len(array)\n",
+    "    dp = [False] * (total+1)\n",
+    "    \n",
+    "    ## Initialize\n",
+    "    dp[0] = True\n",
+    "    \n",
+    "    for i in range(1, n+1):\n",
+    "        for j in range(total, 0, -1):\n",
+    "            if array[i-1] <= j:\n",
+    "                dp[j] = dp[j] or dp[j-array[i-1]]\n",
+    "    \n",
+    "    probableSumList = []\n",
+    "    for i, c in enumerate(dp):\n",
+    "        if c:\n",
+    "            probableSumList.append(i)\n",
+    "    \n",
+    "    ##calculate minumum\n",
+    "    m = len(probableSumList)//2\n",
+    "    \n",
+    "    minimum = float(\"inf\")\n",
+    "    for i in range(m):\n",
+    "        minimum = min(minimum, total - 2*probableSumList[i])\n",
+    "    return minimum\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array = [1,6,11,5]\n",
+    "minimumSubsetSumDifference_1D(array)"
    ]
   },
   {
