Corrected the approach

--- a/Python/DynamicProgramming/KnapSack unbounded.ipynb
+++ b/Python/DynamicProgramming/KnapSack unbounded.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "## Problem\n",
     "\n",
-    "Unbounded knapsack means, we can have multiple items in the knapsacks.\n",
+    "Unbounded knapsack means, we can have same items multiple times in the knapsacks.\n",
     "\n",
-    "While choice, if select the item, then we can select it again. But if not taken then go to next item do not consider that item again."
+    "While choosing an item, we can select the same item multiple times. But if not taken then go to next item do not consider that item again."
    ]
   },
   {
