--- a/Python/DynamicProgramming/LCS-Longest-common-subsequence.ipynb
+++ b/Python/DynamicProgramming/LCS-Longest-common-subsequence.ipynb
@@ -43,6 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Recursion\n",
     "def longestCommonSubSequence(str1, str2):\n",
     "    n = len(str1)\n",
     "    m = len(str2)\n",
@@ -216,6 +217,141 @@
     "str1 = \"leetcode\"\n",
     "str2 = \"coats\"\n",
     "longestCommonSubSequence_dp(str1, str2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Space optimization O(2*m) m = len(str2)\n",
+    "\n",
+    "def longestCommonSubSequence_dp_spaceOptimization(str1, str2):\n",
+    "    n = len(str1)\n",
+    "    m = len(str2)\n",
+    "    \n",
+    "    dp = [[0 for _ in range(m+1)] for _ in range(2)]\n",
+    "    \n",
+    "    for i in range(1, n+1):\n",
+    "        for j in range(1, m+1):\n",
+    "            if str1[i-1] == str2[j-1]:\n",
+    "                dp[i%2][j] = 1 + dp[(i-1)%2][j-1]\n",
+    "            else:\n",
+    "                dp[i%2][j] = max(dp[i%2][j-1], dp[(i-1)%2][j])\n",
+    "    return dp[n%2][-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str1 = \"leetcode\"\n",
+    "str2 = \"coats\"\n",
+    "longestCommonSubSequence_dp_spaceOptimization(str1, str2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str1 = \"abcdgh\"\n",
+    "str2 = \"abedfha\"\n",
+    "longestCommonSubSequence_dp_spaceOptimization(str1, str2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Further space optimization to dp size 1-D O(m), m = len(str2)\n",
+    "\n",
+    "def longestCommonSubSequence_dp_1D(str1, str2):\n",
+    "    n = len(str1)\n",
+    "    m = len(str2)\n",
+    "    \n",
+    "    dp = [0]* (m+1)\n",
+    "    \n",
+    "    for s in str1:\n",
+    "        prev  = 0\n",
+    "        for j in range(1, m+1):\n",
+    "            if s == str2[j-1]:\n",
+    "                prev, dp[j] = dp[j], 1+ prev\n",
+    "            else:\n",
+    "                prev, dp[j] = dp[j], max(dp[j], dp[j-1])\n",
+    "    return dp[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str1 = \"abcdgh\"\n",
+    "str2 = \"abedfha\"\n",
+    "longestCommonSubSequence_dp_1D(str1, str2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str1 = \"leetcode\"\n",
+    "str2 = \"coats\"\n",
+    "longestCommonSubSequence_dp_1D(str1, str2)"
    ]
   },
   {
