--- a/Python/DynamicProgramming/LCS-Longest-Repeating-Subsequence.ipynb
+++ b/Python/DynamicProgramming/LCS-Longest-Repeating-Subsequence.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,13 +40,13 @@
     "                dp[i][j] = 1+ dp[i-1][j-1]\n",
     "            else:\n",
     "                dp[i][j] = max(dp[i-1][j], dp[i][j-1])\n",
-    "    return dp[i][j]\n",
+    "    return dp[-1][-1]\n",
     "                    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "3"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,6 +63,101 @@
    "source": [
     "string = \"aabebcdd\"\n",
     "longestRepeatingSubsequence(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Space optimization\n",
+    "def longestRepeatingSubsequence_spaceOtimized(str1):\n",
+    "    str2 = str1[:]\n",
+    "    n = len(str1)\n",
+    "    # Initialize dp, similar to LCS\n",
+    "    dp = [[0 for _ in range(n+1)] for _ in range(2)]\n",
+    "    \n",
+    "    for i in range(1, n+1):\n",
+    "        for j in range(1, n+1):\n",
+    "            if str1[i-1]==str2[j-1] and (i != j):# this is the extra condition put for this problem\n",
+    "                dp[i%2][j] = 1+ dp[(i-1)%2][j-1]\n",
+    "            else:\n",
+    "                dp[i%2][j] = max(dp[(i-1)%2][j], dp[i%2][j-1])\n",
+    "    return dp[n%2][-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"aabebcdd\"\n",
+    "longestRepeatingSubsequence_spaceOtimized(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Further space optimization\n",
+    "def longestRepeatingSubsequence_1D(str1):\n",
+    "    str2 = str1[:]\n",
+    "    n = len(str1)\n",
+    "    # Initialize dp, similar to LCS\n",
+    "    dp = [0] * (n+1)\n",
+    "    \n",
+    "    for i in range(1, n+1):\n",
+    "        prev = 0\n",
+    "        for j in range(1, n+1):\n",
+    "            if str1[i-1]==str2[j-1] and (i != j):# this is the extra condition put for this problem\n",
+    "                prev, dp[j] = dp[j], 1+ prev\n",
+    "            else:\n",
+    "                prev, dp[j] = dp[j], max(dp[j], dp[j-1])\n",
+    "    print(dp)\n",
+    "    return dp[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 2, 2, 2, 3, 3]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"aabebcdd\"\n",
+    "longestRepeatingSubsequence_1D(string)"
    ]
   },
   {
