--- a/Python/DynamicProgramming/LCS-Longest-Palindromic-Subsequence.ipynb
+++ b/Python/DynamicProgramming/LCS-Longest-Palindromic-Subsequence.ipynb
@@ -71,6 +71,105 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Space optimization\n",
+    "\n",
+    "def longestPalindromicSubsequence_1D(string):\n",
+    "    string1 = string[::-1]\n",
+    "    n = len(string)\n",
+    "    dp = [0] * (n+1)\n",
+    "    \n",
+    "    for s in string:\n",
+    "        prev = 0\n",
+    "        for j in range(1, n+1):\n",
+    "            if s == string1[j-1]:\n",
+    "                prev, dp[j] = dp[j], 1 + prev\n",
+    "            else:\n",
+    "                prev, dp[j] = dp[j], max(dp[j], dp[j-1])\n",
+    "                \n",
+    "    return dp[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"agbcba\"\n",
+    "longestPalindromicSubsequence_1D(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Print the string\n",
+    "\n",
+    "def longestPalindromicSubsequence_print(string):\n",
+    "    string1 = string[::-1]\n",
+    "    n = len(string)\n",
+    "    dp = [0] * (n+1)\n",
+    "    \n",
+    "    for s in string:\n",
+    "        prev = 0\n",
+    "        for j in range(1, n+1):\n",
+    "            if s == string1[j-1]:\n",
+    "                prev, dp[j] = dp[j], 1 + prev\n",
+    "            else:\n",
+    "                prev, dp[j] = dp[j], max(dp[j], dp[j-1])\n",
+    "              \n",
+    "    return (dp[-1], printPalindrome(dp, string1)  )\n",
+    "\n",
+    "def printPalindrome(dp, string):\n",
+    "    seq = []\n",
+    "    n = len(dp)-1\n",
+    "    for i in range(n, 0, -1):\n",
+    "        if dp[i] != dp[i-1]:\n",
+    "            seq.append(string[i-1])\n",
+    "    return list(reversed(seq))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, ['a', 'b', 'c', 'b', 'a'])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"agbcba\"\n",
+    "longestPalindromicSubsequence_print(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
