--- a/Python/DynamicProgramming/LCS-Minimum-Number-Of-Deletion-To-Make-Palindrom.ipynb
+++ b/Python/DynamicProgramming/LCS-Minimum-Number-Of-Deletion-To-Make-Palindrom.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### This is extension of LCS problem. In specific this extension of maximum palindormic sub sequence problem. Here find the maximum palindromic subsequence and delete th extra element. As it is longest palindromic, hence deletion would be minimum. Hence find the longest alindromic subsequence and reduce it from given string. Answer would be minimum deletion of letters."
+    "#### This is extension of LCS problem. In specific this extension of maximum palindormic sub sequence problem. Here find the maximum palindromic subsequence and delete the extra element. As it is longest palindromic, hence deletion would be minimum. Hence find the longest palindromic subsequence and reduce it from given string. Answer would be minimum deletion of letters."
    ]
   },
   {
@@ -69,6 +69,49 @@
    "source": [
     "string = \"agbcba\"\n",
     "minimumNumberOfDeletion(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def minimumNumberOfDeletion_1D(string):\n",
+    "    n = len(string)\n",
+    "    string1 = string[::-1]\n",
+    "    \n",
+    "    dp = [0] * (n+1)\n",
+    "    \n",
+    "    for s in string:\n",
+    "        prev = 0\n",
+    "        for j in range(1, n+1):\n",
+    "            if s == string1[j-1]:\n",
+    "                prev, dp[j] = dp[j], 1+prev\n",
+    "            else:\n",
+    "                prev, dp[j] = dp[j], max(dp[j], dp[j-1])\n",
+    "    return n - dp[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"agbcba\"\n",
+    "minimumNumberOfDeletion_1D(string)"
    ]
   },
   {
