--- a/Python/DynamicProgramming/LCS-Minimum-Number-Insertion-To-Make-Palindrom.ipynb
+++ b/Python/DynamicProgramming/LCS-Minimum-Number-Insertion-To-Make-Palindrom.ipynb
@@ -74,6 +74,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def minimumNumberOfInsertionPalindrom_1D(string):\n",
+    "    string1 = string[::-1]\n",
+    "    n = len(string)\n",
+    "    dp = [0]*(n+1)\n",
+    "    for s in string:\n",
+    "        prev = 0\n",
+    "        for i in range(1, n+1):\n",
+    "            if s == string1[i-1]:\n",
+    "                prev, dp[i] = dp[i], 1+ prev\n",
+    "            else:\n",
+    "                prev, dp[i] = dp[i], max(dp[i], dp[i-1])\n",
+    "    return n - dp[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"acbcbda\"\n",
+    "minimumNumberOfInsertionPalindrom_1D(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
