Optimized for space complexity

--- a/Python/DynamicProgramming/LCS-Minimum-number-of-insertion-deletion.ipynb
+++ b/Python/DynamicProgramming/LCS-Minimum-number-of-insertion-deletion.ipynb
@@ -78,6 +78,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Space optimization\n",
+    "\n",
+    "def minimumNumberOfInDel_1D(str1, str2):\n",
+    "    n = len(str1)\n",
+    "    m = len(str2)\n",
+    "    \n",
+    "    dp = [0] * (m+1)\n",
+    "    for s in str1:\n",
+    "        prev = 0\n",
+    "        for j in range(1, m+1):\n",
+    "            if s == str2[j-1]:\n",
+    "                prev, dp[j] = dp[j], prev + 1\n",
+    "            else:\n",
+    "                prev, dp[j] = dp[j], max(dp[j], dp[j-1])\n",
+    "    \n",
+    "    numberOfDeletion = n - dp[-1]\n",
+    "    numberOfInsertion = m - dp[-1]\n",
+    "    return [numberOfInsertion, numberOfDeletion]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str1 = \"heap\"\n",
+    "str2 = \"pea\"\n",
+    "minimumNumberOfInDel_1D(str1, str2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
