--- a/Python/DynamicProgramming/LCS-Longest-Common-Substring.ipynb
+++ b/Python/DynamicProgramming/LCS-Longest-Common-Substring.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### This problem is simlar to LCS (longest commion subsequence) problem. Only variation here is that, substring should be continuous. If letters are same then will folow as it is there in LCS problem (1 + dp[i-1][j-1]) , but if not same, then will not look letters in subsequence way. If not match then value should be zero at that position. See the code variation in else part."
+    "#### This problem is similar to LCS (longest common subsequence) problem. Only variation here is that, substring should be continuous. If letters are same then will follow as it is there in LCS problem (1 + dp[i-1][j-1]) , but if not same, then will not look letters in subsequence way. If not match then value should be zero at that position. See the code variation in else part."
    ]
   },
   {
@@ -86,6 +86,53 @@
     "str1 = \"ws\" \n",
     "str2 = \"wssw\"\n",
     "lengthLongestCommonSubstring(str1, str2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Space optimization\n",
+    "def lengthLongestCommonSubstring_1D(str1, str2):\n",
+    "    n = len(str1)\n",
+    "    m = len(str2)\n",
+    "    maxLength = 0\n",
+    "    dp = [0] * (m+1)\n",
+    "    \n",
+    "    for s in str1:\n",
+    "        prev = 0\n",
+    "        for j in range(1, m+1):\n",
+    "            \n",
+    "            if s == str2[j-1]:\n",
+    "                prev, dp[j] = dp[j], 1 + prev\n",
+    "            else:\n",
+    "                prev, dp[j] = dp[j], 0\n",
+    "            maxLength = max(maxLength, dp[j])\n",
+    "    return maxLength"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str1 = \"ws\" \n",
+    "str2 = \"wssw\"\n",
+    "lengthLongestCommonSubstring_1D(str1, str2)"
    ]
   },
   {
