--- a/Python/TwoPointers/Easy-Reverse-vowel-of-a-string.ipynb
+++ b/Python/TwoPointers/Easy-Reverse-vowel-of-a-string.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4c37d273",
+   "id": "568ed894",
    "metadata": {},
    "source": [
     "## Problem : Reverse Vowel of a string\n",
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "5a8e06fe",
+   "execution_count": 4,
+   "id": "61151d04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,22 +44,22 @@
     "    string = list(s);\n",
     "    while left<right:\n",
     "        l = string[left].lower()\n",
-    "        if l not in vowel:\n",
-    "            left += 1\n",
     "        m = string[right].lower()\n",
     "        if l in vowel and m in vowel:\n",
     "            string[left], string[right] = string[right], string[left]\n",
     "            left += 1\n",
     "            right -= 1\n",
-    "        elif m not in vowel:\n",
-    "            right -= 1\n",
+    "        elif l in vowel:\n",
+    "            right -=1\n",
+    "        else:\n",
+    "            left += 1\n",
     "    return \"\".join(string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "20395017",
+   "execution_count": 5,
+   "id": "1b2df74c",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "'holle'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,8 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c15c6015",
+   "execution_count": 6,
+   "id": "82612c80",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "'leotcede'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d4bb20f",
+   "id": "95af6622",
    "metadata": {},
    "outputs": [],
    "source": []
