--- a/Python/BinaryTree/GoodNodes.ipynb
+++ b/Python/BinaryTree/GoodNodes.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,25 +55,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def goodNodesCount(root):\n",
     "    return goodNodesCountHelper(root, root.value)\n",
     "\n",
-    "def goodNodesCountHelper(root, value):\n",
+    "def goodNodesCountHelper(root, maxValue):\n",
     "    if root is None:\n",
     "        return 0\n",
-    "    maxval = max(value, root.value)\n",
-    "    count  = 1 if root.value>= value else 0\n",
-    "    return count + goodNodesCountHelper(root.left, maxval) + goodNodesCountHelper(root.right, maxval)\n",
+    "    count  = 1 if root.value>= maxValue else 0\n",
+    "    maxValue = max(maxValue, root.value)\n",
+    "    return count + goodNodesCountHelper(root.left, maxValue) + goodNodesCountHelper(root.right, maxValue)\n",
+    "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +112,7 @@
        "4"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +161,7 @@
        "4"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +180,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -193,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
