--- a/Python/BinaryTree/BT-Path Sum.ipynb
+++ b/Python/BinaryTree/BT-Path Sum.ipynb
@@ -60,26 +60,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Definition for a binary tree node.\n",
-    "# class TreeNode:\n",
-    "#     def __init__(self, val=0, left=None, right=None):\n",
-    "#         self.val = val\n",
-    "#         self.left = left\n",
-    "#         self.right = right\n",
-    "\n",
+    "#Definition for a binary tree node.\n",
+    "class Node:\n",
+    "    def __init__(self, val=0, left=None, right=None):\n",
+    "        self.val = val\n",
+    "        self.left = left\n",
+    "        self.right = right"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def hasPathSum(root, targetSum):\n",
-    "        return pathSum(root, 0, targetSum)\n",
-    "def pathSum(root, currentSum, targetSum):\n",
+    "        return pathSum(root, targetSum)\n",
+    "def pathSum(root, targetSum):\n",
     "    if not root:\n",
     "        return False\n",
-    "    currentSum += root.val\n",
-    "    if currentSum == targetSum and root.left is None and root.right is None:\n",
+    "    targetSum -= root.val\n",
+    "    if targetSum == 0 and root.left is None and root.right is None:\n",
     "        return True\n",
-    "    return pathSum(root.left, currentSum, targetSum) or pathSum(root.right, currentSum, targetSum)"
+    "    return pathSum(root.left,targetSum) or pathSum(root.right,targetSum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root = Node(5, Node(4, Node(11,Node(7), Node(2))), Node(8, Node(13), Node(4, None, Node(1))))\n",
+    "targetSum = 22\n",
+    "hasPathSum(root, targetSum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root = Node(1, Node(2), Node(3))\n",
+    "targetSum = 5\n",
+    "hasPathSum(root, targetSum)"
    ]
   },
   {
@@ -92,7 +143,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -106,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
