--- a/Python/BinaryTree/BT - Flatten Binary Tree.ipynb
+++ b/Python/BinaryTree/BT - Flatten Binary Tree.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,9 +44,16 @@
     "    def __init__(self, value, left=None, right=None):\n",
     "        self.value = value\n",
     "        self.left = left\n",
-    "        self.right = right\n",
-    "\n",
-    "\n",
+    "        self.right = right"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Aproach 1\n",
     "def flattenBinaryTree(root):\n",
     "    # Write your code here.\n",
     "    leftMost, _ = helper(root)\n",
@@ -72,6 +79,115 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def printDLL(head):\n",
+    "    while head:\n",
+    "        print(head.value)\n",
+    "        head = head.right\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "2\n",
+      "7\n",
+      "5\n",
+      "8\n",
+      "1\n",
+      "6\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "root = BinaryTree(1, BinaryTree(2, BinaryTree(4), BinaryTree(5, BinaryTree(7), BinaryTree(8))), BinaryTree(3, BinaryTree(6)))\n",
+    "head = flattenBinaryTree(root)\n",
+    "printDLL(head)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Approach 2\n",
+    "def flattenBinaryTree1(root):\n",
+    "    if not root:\n",
+    "        return None\n",
+    "    prev = [None] # Passed the refrence to hold the value during recursion\n",
+    "    head = [None] # Passed the refrence to hold the value during recursion\n",
+    "    flattenTree(root, prev, head)\n",
+    "    return head[0]\n",
+    "\n",
+    "# Helper function to perform in-order traversal and flatten the tree\n",
+    "def flattenTree(node, prev, head):\n",
+    "    \n",
+    "    if not node:\n",
+    "        return None\n",
+    "\n",
+    "    # Flatten the left subtree\n",
+    "    flattenTree(node.left, prev, head)\n",
+    "\n",
+    "    # Update pointers\n",
+    "    if prev[0]:\n",
+    "        prev[0].right = node\n",
+    "        node.left = prev[0]\n",
+    "    else:\n",
+    "        head[0] = node\n",
+    "        \n",
+    "    prev[0] = node\n",
+    "\n",
+    "    # Flatten the right subtree\n",
+    "    flattenTree(node.right, prev, head)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "2\n",
+      "7\n",
+      "5\n",
+      "8\n",
+      "1\n",
+      "6\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "root = BinaryTree(1, BinaryTree(2, BinaryTree(4), BinaryTree(5, BinaryTree(7), BinaryTree(8))), BinaryTree(3, BinaryTree(6)))\n",
+    "head = flattenBinaryTree1(root)\n",
+    "printDLL(head)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -80,7 +196,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -94,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
