Added test cases

--- a/Python/BinaryTree/BT - Invert Binary Tree.ipynb
+++ b/Python/BinaryTree/BT - Invert Binary Tree.ipynb
@@ -25,18 +25,32 @@
     "\n",
     "Output:\n",
     "\n",
-    "  1\n",
-    " / \\\n",
-    " 3   2\n",
-    " / \\ / \\\n",
-    "7  6 5 4\n",
-    "      / \\\n",
-    "       9 8"
+    "      1\n",
+    "     / \\\n",
+    "     3   2\n",
+    "     / \\ / \\\n",
+    "    7  6 5 4\n",
+    "          / \\\n",
+    "           9 8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is the class of the input binary tree.\n",
+    "class BinaryTree:\n",
+    "    def __init__(self, value, leftNode= None, rightNode = None):\n",
+    "        self.value = value\n",
+    "        self.left = leftNode\n",
+    "        self.right = rightNode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,15 +60,47 @@
     "        return\n",
     "    invertBinaryTree(tree.left)\n",
     "    invertBinaryTree(tree.right)\n",
-    "    tree.left, tree.right = tree.right, tree.left\n",
-    "\n",
-    "\n",
-    "# This is the class of the input binary tree.\n",
-    "class BinaryTree:\n",
-    "    def __init__(self, value):\n",
-    "        self.value = value\n",
-    "        self.left = None\n",
-    "        self.right = None"
+    "    tree.left, tree.right = tree.right, tree.left\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def printTree(root):\n",
+    "    if root:\n",
+    "        print(root.value )\n",
+    "        printTree(root.left)\n",
+    "        printTree(root.right)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "7\n",
+      "6\n",
+      "2\n",
+      "5\n",
+      "4\n",
+      "9\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "root = BinaryTree(1, BinaryTree(2, BinaryTree(4, BinaryTree(8), BinaryTree(9)), BinaryTree(5)), BinaryTree(3, BinaryTree(6), BinaryTree(7)))\n",
+    "invertBinaryTree(root)\n",
+    "printTree(root)"
    ]
   },
   {
@@ -67,7 +113,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -81,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
