Added test cases

--- a/Python/BinaryTree/BT- Compare Leaf Traversal-Leaf-Similar Trees.ipynb
+++ b/Python/BinaryTree/BT- Compare Leaf Traversal-Leaf-Similar Trees.ipynb
@@ -48,23 +48,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Definition for a binary tree node.\n",
-    "# class TreeNode(object):\n",
-    "#     def __init__(self, val=0, left=None, right=None):\n",
-    "#         self.val = val\n",
-    "#         self.left = left\n",
-    "#         self.right = right\n",
+    "class TreeNode(object):\n",
+    "    def __init__(self, val=0, left=None, right=None):\n",
+    "        self.val = val\n",
+    "        self.left = left\n",
+    "        self.right = right"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def leafSimilar(root1, root2):\n",
     "    if not root1 and not root2:\n",
     "        return True\n",
-    "    if not root1:\n",
-    "        return False\n",
-    "    if not root2:\n",
+    "    if not root1 or not root2:\n",
     "        return False\n",
     "    leaf1 = []\n",
     "    leaf2 = []\n",
@@ -77,14 +83,57 @@
     "        if v != leaf2[i]:\n",
     "            return False\n",
     "    return True\n",
+    "    \n",
     "def getLeaf(root, leaf):\n",
-    "    if not root:\n",
-    "        return\n",
     "    if root.left is None and root.right is None:\n",
     "        leaf.append(root.val)\n",
     "        return\n",
     "    getLeaf(root.left, leaf)\n",
     "    getLeaf(root.right, leaf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root1 = TreeNode(3, TreeNode(5, TreeNode(6), TreeNode(2, TreeNode(7), TreeNode(4))), TreeNode(1, TreeNode(9), TreeNode(8)))\n",
+    "root2 = TreeNode(3, TreeNode(5, TreeNode(6), TreeNode(7)), TreeNode(1, TreeNode(4), TreeNode(2, TreeNode(9), TreeNode(8))))\n",
+    "leafSimilar(root1, root2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root1 = TreeNode(1, TreeNode(2), TreeNode(3))\n",
+    "root2 = TreeNode(1, TreeNode(3), TreeNode(2))\n",
+    "leafSimilar(root1, root2)"
    ]
   },
   {
@@ -97,7 +146,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -111,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
