--- a/Python/BinaryTree/BT- Height Balanced Binary Tree.ipynb
+++ b/Python/BinaryTree/BT- Height Balanced Binary Tree.ipynb
@@ -35,12 +35,19 @@
    "outputs": [],
    "source": [
     "class BinaryTree:\n",
-    "    def __init__(self, value, left=None, right=None):\n",
-    "        self.value = value\n",
+    "    def __init__(self, val, left=None, right=None):\n",
+    "        self.val = val\n",
     "        self.left = left\n",
-    "        self.right = right\n",
-    "\n",
-    "\n",
+    "        self.right = right"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Approach 1\n",
     "class TreeInfo:\n",
     "    def __init__(self,isBalance, height):\n",
     "        self.isBalance = isBalance\n",
@@ -66,6 +73,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root = BinaryTree(1, BinaryTree(2, BinaryTree(4), BinaryTree(5, BinaryTree(7), BinaryTree(8))), BinaryTree(3, None, BinaryTree(6)))\n",
+    "heightBalancedBinaryTree(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Approach 2\n",
+    "\n",
+    "def balanceTree(tree):\n",
+    "    balance, _ = isBalance(tree)\n",
+    "    return balance\n",
+    "def isBalance(tree):\n",
+    "    if not tree:\n",
+    "        return (True, 0)\n",
+    "    leftB, leftH = isBalance(tree.left)\n",
+    "    rightB, rightH = isBalance(tree.right)\n",
+    "    balance = leftB and rightB\n",
+    "    if abs(leftH-rightH) > 1:\n",
+    "        balance = False\n",
+    "    height = max(leftH, rightH)+1\n",
+    "    return (balance, height)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root = BinaryTree(1, BinaryTree(2, BinaryTree(4), BinaryTree(5, BinaryTree(7), BinaryTree(8))), BinaryTree(3, None, BinaryTree(6)))\n",
+    "balanceTree(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -74,7 +146,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -88,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
